affichage de la vue

--- a/templates/game/add.html.twig
+++ b/templates/game/add.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hello CategoryController!{% endblock %}
 
 {% block body %}
-<h1> Merveilleux Formulaire </h1>
+<h1> Ajouter un jeu </h1>
+
      {{ form(form)}}
 {% endblock %}
