--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello GameController!{% endblock %}
 
 {% block body %}
-<style>
+{# <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
@@ -16,5 +16,22 @@
         <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/symfony-essai/src/Controller/GameController.php'|file_link(0) }}">src/Controller/GameController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/symfony-essai/templates/game/index.html.twig'|file_link(0) }}">templates/game/index.html.twig</a></code></li>
     </ul>
-</div>
+</div> #}
+    <div style="text-align:center"><h1>Liste des jeux</h1></div>
+    <div class="container">
+        {% for game in games %}
+        <div class="card" style="width: 18rem; background-color:smoke; margin-left: 20px">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4 class="card-title" style="font-weight: bold; margin-bottom: 20px">{{ game.title }}</h4>
+            <p class="card-text"><b>Description: </b>{{ game.description|slice(0,20)~'...'  }}</p>
+            <p class="card-text"><b>Joueur: </b>{{ game.players}}</p>
+            <p class="card-text"><b>Temps: </b>{{ game.time}}min</p>
+            <a href="#" class="btn btn-primary">Consulter</a>
+        </div>
+    </div>
+        {% endfor %}
+    </div>
+
+
 {% endblock %}
