ajout template add game

--- a/templates/game/show.html.twig
+++ b/templates/game/show.html.twig
@@ -3,7 +3,17 @@
 {% block title %} {% endblock %}
 
 {% block body %} 
-<h1> Ca marche ! </h1>
+<h1>{{games.title}}</h1>
+<div>
+     <p><b>Description:</b> {{games.description}}</p>
+     <p><b>Nombre de joueurs: </b> {{games.players}}</p>
+     <p><b>Âge minimum: </b> {{games.age}}</p>
+     <p><b>Temps d'une partie: </b> {{games.time}} min</p>
+     <p><b>Date de sortie: </b> {{games.released}}</p>
+     {% for cat in games.categories %}
+          <span>{{ cat.name }}</span>
+     {% endfor %}
+</div>
 {% endblock %}
 
 
