--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -26,11 +26,10 @@
             <h4 class="card-title" style="font-weight: bold; margin-bottom: 30px">{{ game.title }}</h4>
             <p class="card-text"><b>Description: </b>{{ game.description|slice(0,70)~'...'  }}</p>
 
-            <a href="{{path(app_show_game), {id: game.id})}}" class="btn btn-primary">Voir plus</a>
+            <a href="{{ path("app_show_game", {id: game.id}) }}" class="btn btn-primary">Voir plus</a>
         </div>
     </div>
         {% endfor %}
     </div>
-
 
 {% endblock %}
