--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -1,44 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello GameController!{% endblock %}
+{% block title %}GameController!{% endblock %}
 
 {% block body %}
-{# <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/symfony-essai/src/Controller/GameController.php'|file_link(0) }}">src/Controller/GameController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/symfony-essai/templates/game/index.html.twig'|file_link(0) }}">templates/game/index.html.twig</a></code></li>
-    </ul>
-</div> #}
-    <div style="text-align:center"><h1>Liste des jeux</h1></div>
-    {# <div class="container">
-        {% for game in games %}
-        <div class="card" style="width: 18rem; background-color:smoke; margin-left: 20px">
-            <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h4 class="card-title" style="font-weight: bold; margin-bottom: 30px">{{ game.title }}</h4>
-                    <p class="card-text"><b>Description: </b>{{ game.description|slice(0,70)~'...'  }}</p>
-
-                    <a href="{{ path("app_show_game", {id: game.id}) }}" class="btn btn-primary">Voir plus</a>
-                </div>
-        </div> #}
-
+    <h1 class="mt-2 text-xl text-center leading-7 font-bold text-gray-900">Liste des jeux</h1>
     <div class="container my-12 mx-auto px-4 md:px-12">
         <div class="flex flex-wrap -mx-1 lg:-mx-4">
 
             <!-- Column -->
             {% for game in games %}
-            <div class="my-1 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
+            <div class="my-2 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
 
                 <!-- Article -->
-                <article class="overflow-hidden rounded-lg shadow-lg">
+                <article class="overflow-hidden rounded-lg shadow-2xl">
 
                     <a href="#">
                         <img alt="Placeholder" class="block h-auto w-full" src="https://picsum.photos/600/400/?random">
@@ -60,8 +34,6 @@
                                 </p>
                                 </a>
                             </div>
-                        
-                        
                     </header>
 
                     <footer class="flex items-center justify-between leading-none p-2 md:p-4">
