--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,23 +1,17 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}GameView!{% endblock %}
-
 {% block body %}
-    {# <h1 class="mt-2 text-xl text-center leading-7 font-bold text-gray-900">Liste des jeux</h1> #}
+
     <div class="container my-12 mx-auto px-4 md:px-12">
         <div class="flex flex-wrap -mx-1 lg:-mx-4">
 
             <!-- Column -->
-            {% for game in games %}
-            {%dump(game)%}
+            {% for game in cat.games %}
+            {%dump(game)%} 
             <div class="my-2 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
 
                 <!-- Article -->
                 <article class="overflow-hidden rounded-lg shadow-2xl">
 
-                    <a href="#">
-                        <img alt="Placeholder" class="block h-auto w-full" src="uploads/{{ game.picture }}"></a>
-
+                    <a href="#"><img src "{{asset('uploads/' ~ game.picture)}}" class="block h-auto w-full"></a>
                     <header class="flex items-center justify-between leading-tight p-2 md:p-4">
                             <div class="flex-1">
                                 <p class="text-sm leading-5 font-medium text-teal-600">
@@ -47,7 +41,6 @@
                             <i class="fa fa-heart"></i>
                         </a>
                     </footer>
-
                 </article>
                 <!-- END Article -->
 
@@ -60,6 +53,5 @@
     </div>
     </div>
 
-    
 
 {% endblock %}
