--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -10,13 +10,13 @@
             <!-- Column -->
             {% for game in games %}
             {%dump(game)%}
-            <div class="my-2 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/5">
+            <div class="my-2 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
 
                 <!-- Article -->
-                <article class="overflow-hidden rounded-lg shadow-2xl">
+                <article class="overflow-hidden rounded-lg shadow-2xl" style="background-color:white">
 
                     <a href="#">
-                        <img alt="Placeholder" class="block h-auto w-full" src="uploads/{{ game.picture }}"></a>
+                        <img alt="Placeholder"  style="width: 50%; margin: 0 auto" class="block h-auto w-full" src="uploads/{{ game.picture }}"></a>
 
                     <header class="flex items-center justify-between leading-tight p-2 md:p-4">
                             <div class="flex-1">
