--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {# <h1 class="mt-2 text-xl text-center leading-7 font-bold text-gray-900">Liste des jeux</h1> #}
-    <div class="container my-12 mx-auto px-4 md:px-12">
+    {# <div class="container my-12 mx-auto px-4 md:px-12">
         <div class="flex flex-wrap -mx-1 lg:-mx-4">
 
             <!-- Column -->
@@ -22,7 +22,7 @@
                             <div class="flex-1">
                                 <p class="text-sm leading-5 font-medium text-teal-600">
                                 <a href="#" class="hover:underline">
-                                   {# {{ game.categories }} #} Categorie
+                                Categorie
                                 </a>
                                 </p>
                                 <a href="#" class="block">
@@ -49,17 +49,54 @@
                     </footer>
 
                 </article>
-                <!-- END Article -->
+
 
             </div>
-            <!-- END Column -->
             {% endfor %}
 
 
         </div>
     </div>
+    </div> #}
+    
+
+
+    <div class="bg-white">
+  <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
+  
+    <h2 class="text-2xl font-bold tracking-tight text-gray-900">Faites votre choix !</h2>
+
+    <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+                {% for game in games %}
+            {%dump(game)%}
+      <div class="group relative">
+        <div class="min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md bg-gray-200 group-hover:opacity-75 lg:aspect-none lg:h-80">
+          <img src="uploads/{{ game.picture }}" style="width: 100%;"  alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+        </div>
+        <div class="mt-4 flex justify-between">
+          <div>
+            <h3 class="text-sm text-gray-700">
+              <a href="#">
+                <span aria-hidden="true" class="absolute inset-0"></span>
+                {{ game.title }}
+              </a>
+            </h3>
+            <p class="mt-1 text-sm text-gray-500">{{ game.description|slice(0,60)~'...'  }}</p>
+
+          </div>
+           <a class=" iconheart no-underline text-grey-darker hover:text-red-dark" href="#">
+                            <span class="hidden">Like</span>
+                            <i class="fa fa-heart"></i>
+                        </a>
+        </div>
+      </div>
+                {% endfor %}
+
+      <!-- More products... -->
     </div>
 
+  </div>
+</div>
     
 
 {% endblock %}
