--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -59,24 +59,21 @@
     </div>
     </div> #}
     
-
-
-    <div class="bg-white">
-  <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
-  
+    <div class="bg-white" style="padding: 0% 7%">
+  <div class="mx-auto max-w-2xl py-5 px-4 sm:py-08 sm:px-6 lg:max-w-7xl lg:px-8" style="padding-left:3.5rem">
     <h2 class="text-2xl font-bold tracking-tight text-gray-900">Faites votre choix !</h2>
 
-    <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+    <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-3 sm:grid-cols-3 lg:grid-cols-5 xl:gap-x-3">
                 {% for game in games %}
             {%dump(game)%}
       <div class="group relative">
-        <div class="min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md bg-gray-200 group-hover:opacity-75 lg:aspect-none lg:h-80">
-          <img src="uploads/{{ game.picture }}" style="width: 100%;"  alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-        </div>
+            <div class="min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md bg-gray-200 group-hover:opacity-75 lg:aspect-none lg:h-50">   
+                <img src="uploads/{{ game.picture }}" style="width: 100%;"  alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+            </div>
         <div class="mt-4 flex justify-between">
           <div>
             <h3 class="text-sm text-gray-700">
-              <a href="#">
+              <a href="{{ path("app_show_game", {id: game.id}) }}">
                 <span aria-hidden="true" class="absolute inset-0"></span>
                 {{ game.title }}
               </a>
