--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,9 +8,9 @@
     background-color: white;
 }
 
-body.bodybg{
-    @include bgcolor
-}
+// body.bodybg{
+//     @include bgcolor
+// }
 
 header.flex{
     @include bgcolor2
@@ -30,6 +30,10 @@ footer.flex{
 
 a.iconheart:hover{
     color: red;
+}
+
+.bg-white{
+     padding: 0% 6% !important;
 }
 
 
