--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,17 +62,13 @@
 
     <nav @mouseover="show = true" @mouseout="show = false" class="flex flex-col h-full justify-between space-y-4 px-2 py-6 bg-gray-800 text-gray-100 lg:fixed z-50 text-sm" style="position:fixed">
     <div class="flex justify-center items-center font-bold space-x-2" :class="{'bg-blue-100 text-blue-500 px-1 py-0.5 rounded': show}">
-      <i class="fa fa-bullseye text-blue-500"></i>
-      <span x-show="show">ESPRIT JEU</span>
+      <a href="{{ path('app_game')}}"><i class="fa fa-bullseye text-blue-500"></i>
+      <span x-show="show">ESPRIT JEU</span></a>
     </div>
     <div class="flex flex-1 flex-col space-y-2" :class="{'items-center' : !show}">
       <span class="space-x-2 px-2 py-1 rounded hover:bg-blue-500 hover:text-blue-100 cursor-pointer">
         <i class="fa fa-home"></i>
         <span x-show="show">Dashboard</span>
-      </span>
-      <span class="space-x-2 px-2 py-1 rounded hover:bg-blue-500 hover:text-blue-100 cursor-pointer">
-        <i class="fa fa-home"></i>
-        <span x-show="show">Accueil</span>
       </span>
       <span class="space-x-2 px-2 py-1 rounded hover:bg-blue-500 hover:text-blue-100 cursor-pointer">
         <i class="fa fa-laptop"></i>
@@ -119,8 +115,11 @@
         <span x-show="show">Paramètres</span>
       </span>
       <span class="space-x-2 px-2 py-1 rounded hover:bg-blue-500 hover:text-blue-100 cursor-pointer">
-        <i class="fa fa-power-off"></i>
-        <span x-show="show">Connexion</span>
+        {% if app.user %}
+              <a href="{{ path('app_logout')}}"><i class="fa fa-power-off"></i><span x-show="show"> Me déconnecter</span></a>
+        {% else %}
+              <a href="{{ path('app_login')}}"><i class="fa fa-power-off"></i><span x-show="show"> Me connecter</span></a>
+        {% endif %}
       </span>
     </div>
 
