--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,9 +35,14 @@
       <span class="self-center whitespace-nowrap text-xl font-semibold">EspriJeu</span>
     </a>
     <div class="mt-2 sm:mt-0 sm:flex md:order-2">
+        {# {% if app.user %} #}
+              <a href="{{ path('app_register')}}"><button type="button" class="rounde mr-3 hidden border border-blue-700 py-1.5 px-6 text-center text-sm font-medium text-blue-700 focus:outline-none focus:ring-4 focus:ring-blsue-300 md:inline-block rounded-lg">S'inscrire</button></a>
+        {# {% else %} #}
+              <a href="{{ path('app_login')}}"> <button type="button" class="rounde mr-3 hidden bg-blue-700 py-1.5 px-6 text-center text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 md:mr-0 md:inline-block rounded-lg">Se connecter</button></a>
+        {# {% endif %} #}
       <!-- Login Button -->
-      <button type="button" class="rounde mr-3 hidden border border-blue-700 py-1.5 px-6 text-center text-sm font-medium text-blue-700 focus:outline-none focus:ring-4 focus:ring-blsue-300 md:inline-block rounded-lg">Login</button>
-      <button type="button" class="rounde mr-3 hidden bg-blue-700 py-1.5 px-6 text-center text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 md:mr-0 md:inline-block rounded-lg">Register</button>
+      
+     
       <!-- Register Button -->
       <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center rounded-lg p-2 text-sm text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 md:hidden" aria-controls="navbar-sticky" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
@@ -69,6 +74,14 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.8.2/alpine.js'></script>
     </body>
 </html>
+
+
+
+
+
+
+
+
 
 
 {# <body>
