--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -6,6 +6,40 @@
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
+<div class="bg-gray-100 text-gray-900">
+  <div class="mt-10 p-8 max-w-md mx-auto">
+
+    <form action="{{ path('app_login') }}" method="post" class="bg-white rounded-lg shadow-lg p-8">
+
+      <h1 class="text-xl font-bold mb-6">Se connecter à mon compte</h1>
+
+      <div class="mb-4">
+        <label for="username" class="block mb-1">Email</label>
+        <input placeholder="Enter your user name" id="username" type="text" name="_username" class="placeholder-gray-700 w-full border border-gray-400 py-2 px-2 rounded focus:outline-none focus:shadow-outline" value="{{ last_username }}">
+        <!--                 <input placeholder="Enter your user name" id="username" type="text" name="username" class="placeholder-gray-700 w-full border border-red-500 py-2 px-2 rounded focus:outline-none focus:shadow-outline">
+        <div class="text-sm text-red-500 mt-1">Please enter a valid username</div> -->
+      </div>
+
+      <div class="mb-4">
+        <label for="password" class="block mb-1">Mot de passe</label>
+        <input placeholder="Enter your password" id="password" type="password" name="_password" class="placeholder-gray-700 w-full border border-gray-400 py-2 px-2 rounded focus:outline-none focus:shadow-outline">
+      </div>
+
+      <div>
+        <button class="w-full transition duration-200 ease-in-out mt-2 mb-6 px-5 py-3 rounded bg-teal-600 text-white shadow hover:bg-teal-700 focus:outline-none focus:shadow-outline">Se connecter</button>
+      </div>
+
+      <a href="{{ path('app_register')}}" class="inline-block mr-4 text-blue-500 hover:underline hover:text-blue-700">S'inscrire</a>
+      <a href="#" class="inline-block mr-4 text-blue-500 hover:underline hover:text-blue-700">Renouveller le mot de passe</a>
+    </form>
+
+  </div>
+</div>
+
+{# 
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
 <div class="h-screen flex items-center justify-center bg-gray-100">
 
   <div class="bg-white py-5 px-8 border-t-4 border-teal-500 rounded-md shadow-lg">
@@ -26,11 +60,11 @@
 
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"> #}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"><a href="{{ path('app_game')}}">
+        {# <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"><a href="{{ path('app_game')}}">
          <button class="border-none bg-teal-500 py-2 px-3 text-white roudend-sm w-full mt-2 rounded-md hover:bg-teal-500 mb-5" type="submit">Valider</a></button>
     </form>
 
       </div>
   
-</div>
+</div> #} 
 {% endblock %}
