--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Register{% endblock %}
 
-{% block body %}
+{# {% block body %}
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
@@ -14,4 +14,48 @@
 
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
+{% endblock %} #}
+
+{# {% block body %} #}
+    {# {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %} #}
+
+{% block body %}
+
+<div class="bg-gray-100 text-gray-900">
+  <div class="mt-10 p-8 max-w-md mx-auto">
+
+    <form action="{{ form_start(registrationForm) }}" method="post" class="bg-white rounded-lg shadow-lg p-8">
+
+      <h1 class="text-xl font-bold mb-6">S'inscrire</h1>
+
+      <div class="mb-4">
+        <label for="email" class="block mb-1">Email</label>
+        <input placeholder="Enter your user mail" id="username" type="text" name="_email" class="placeholder-gray-700 w-full border border-gray-400 py-2 px-2 rounded focus:outline-none focus:shadow-outline" value="{{ form_row(registrationForm.email)}}">
+        <!--                 <input placeholder="Enter your user name" id="username" type="text" name="username" class="placeholder-gray-700 w-full border border-red-500 py-2 px-2 rounded focus:outline-none focus:shadow-outline">
+        <div class="text-sm text-red-500 mt-1">Please enter a valid username</div> -->
+      </div>
+
+      <div class="mb-4">
+        <label for="password" class="block mb-1">Mot de passe</label>
+        <input placeholder="Enter your password" id="password" type="password" name="_password" class="placeholder-gray-700 w-full border border-gray-400 py-2 px-2 rounded focus:outline-none focus:shadow-outline" value="{{
+      form_row(
+        registrationForm.plainPassword,
+        {
+          label: 'Password'
+        }
+      )
+    }}">
+      </div>
+    {{ form_row(registrationForm.agreeTerms, { label: "J'accepte les conditions"}) }}
+
+      <div>
+        <button class="w-full transition duration-200 ease-in-out mt-2 mb-6 px-5 py-3 rounded bg-teal-600 text-white shadow hover:bg-teal-700 focus:outline-none focus:shadow-outline" type="submit" >Valider</button>{{ form_end(registrationForm) }}
+      </div>
+    </form>
+
+  </div>
+</div>
+
 {% endblock %}
